# uic-attribute-rules

./: .gitignore  pyproject.toml  readme.md  requirements.dev.txt
.github/: dependabot.yml
src/: ar.py  migrations.py  reference.py
src/config/: config.py
src/models/: rule.py  ruletypes.py
src/rules/: area_of_review.py  art_pen.py  authorization.py  authorization_action.py  common.py  contact.py  correction.py  enforcement.py  facility.py  inspection.py  mit.py  operating_status.py  violation.py  well.py
src/rules/arcade/artPen/: caDateConstraint.js  caTypeConstraint.js  commentConstraint.js  reviewDateConstraint.js
src/rules/arcade/authorization/: authorizationTypeConstraint.js  idCalculation.js
src/rules/arcade/authorizationAction/: dateConstraint.js  typeConstraint.js
src/rules/arcade/contact/: contactType.js
src/rules/arcade/correction/: commentConstraint.js
src/rules/arcade/enforcement/: commentConstraint.js  dateConstraint.js
src/rules/arcade/facility/: cityCalculation.js  fipsCalculation.js  fipsConstraint.js  idCalculation.js  zipCalculation.js  zipConstraint.js
src/rules/arcade/inspection/: dateConstraint.js  deficiencyConstraint.js  oneFkConstraint.js  typeConstraint.js
src/rules/arcade/mit/: commentConstraint.js  commentMitTypeConstraint.js  dateConstraint.js  remediationConstraint.js  remediationDate.js  resultConstraint.js  typeConstraint.js
src/rules/arcade/operatingStatus/: dateConstraint.js  typeConstraint.js
src/rules/arcade/violation/: commentConstraint.js  (+5 more)
src/services/: loader.py
tests/: test_facility.py
(+8 files in other folders)
